Selecting pose icon under expanded group in outliner causes crash #51926

Closed
opened 2017-06-28 21:35:14 +02:00 by cris · 4 comments

System Information
Windows 10

Blender Version
Broken: 2.78 3c2f046

Short description of error
Going into Groups in the Outliner and expanding the group and the armature icon and then trying to click the Pose icon causes Blender to immediately to crash.

Exact steps for others to reproduce the error

  • This is based on obtaining the files in the linking.zip folder from here https://developer.blender.org/T49495, unpacking and appending shot_file.blend
  • Go to Groups in the outliner, expand the group and armature
  • Click the Pose icon, it should crash

linking.zip

**System Information** Windows 10 **Blender Version** Broken: 2.78 3c2f046 **Short description of error** Going into Groups in the Outliner and expanding the group and the armature icon and then trying to click the Pose icon causes Blender to immediately to crash. **Exact steps for others to reproduce the error** - This is based on obtaining the files in the linking.zip folder from here https://developer.blender.org/T49495, unpacking and appending shot_file.blend - Go to Groups in the outliner, expand the group and armature - Click the Pose icon, it should crash [linking.zip](https://archive.blender.org/developer/F645753/linking.zip)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @ShyGuyMath

Added subscriber: @ShyGuyMath
cris changed title from Selecting armature Pose icon under Groups in Outliner for appended scenes to Selecting pose icon under expanded group in outliner causes crash 2017-06-28 21:59:32 +02:00
Bastien Montagne self-assigned this 2017-06-29 09:44:00 +02:00

This issue was referenced by a57a7975a1

This issue was referenced by a57a7975a1625d0876ff6ac13c14d5784236eb7e

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#51926
No description provided.