Fix T51926: Selecting pose icon under expanded group in outliner causes crash.

Cannot switch uninstantiated armature to Pose mode...